# ENSAI-Projet-info-2A

./: .env.test  .gitignore  .pre-commit-config.yaml  2025.09.04-semaine1.md  2025.09.04-semaine2.md  2025.09.18-semaine3.md  2025.09.25-semaine4.md  AAAAAAAAAAAA.py  Commandes.md  README.md  a.py  m.py  pyproject.toml
Data/bdd/: creation_table.py  stock.py  table.sql
Data/client/: fetch.py
Rendu_hebdo/: 2025.10.02-semaine5.md  2025.10.09-semaine6.md  2025.10.23-semaine8.md  2025.11.06-semaine10.md
data/: init.sql  pop_db_test.sql
data/bdd/: creation_table.py  stock.py  table.sql
data/client/: api.py
doc/Diagrammes/: rappel.md
doc/Rendu_hebdo/: 2025.09.11-semaine2.md  2025.10.02-semaine5.md  2025.10.09-semaine6.md  2025.10.16-semaine7.md  2025.10.30-semaine9.md  2025.11.06-semaine10.md  2025.11.13-semaine11.md  2025.11.20-semaine12.md
src/: __init__.py  main.py
src/api/: __init__.py  deps.py  main.py
src/business_object/: __init__.py  avis.py  cocktail.py  ingredient.py  stock.py  unite.py  utilisateur.py
src/dao/: __init__.py  acces_dao.py  avis_dao  avis_dao.py  cocktail_dao.py  cocktail_utilisateur_dao.py  db_connection.py  ingredient_dao.py  instruction_dao.py  liste_course_dao.py  stock_course_dao.py  stock_dao.py  unite_dao.py  utilisateur_dao.py
src/models/: __init__.py  acces.py  avis.py  cocktail.py  cocktail_prive.py  liste_course.py  misc.py  stock.py  utilisateurs.py
src/service/: __init__.py  acces_service.py  avis_service.py  cocktail_service.py  cocktail_utilisateur_service.py  ingredient_service.py  liste_course_service.py  (+3 more)
(+63 files in other folders)
