[project]
name = "python-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
    "bcrypt==3.2.2",
    "pyjwt>=2.10.1",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "ruff>=0.12.12",
    "mypy>=1.17.1",
    "types-psycopg2>=2.9.21.20250809",
    "types-passlib>=1.7.7.20250602",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.0",
    "pytest-coverage>=0.0",
]


[tool.ruff]
line-length = 93
namespace-packages = ["src"]

[tool.ruff.lint]
preview=true
select=[
    "ALL"
]

ignore=[
    "INP001",
    "CPY",
    "DOC201",
    "DOC501",
    "DOC402",
    "D205",
    "N807",
    "ANN001"
]

exclude = [
    "src/utils/singleton.py",
    "src/dao/db_connection.py"
]

[tool.mypy]
plugins = ['pydantic.mypy'] 
